--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -71,6 +71,7 @@
     <Compile Include="EmailTemplate.cs" />
     <Compile Include="Enum\AuctionStatus.cs" />
     <Compile Include="Enum\EmailTemplateType.cs" />
+    <Compile Include="Enum\UserProfileStatus.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Product.cs" />
     <Compile Include="ProductImage.cs" />
@@ -78,6 +79,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="Sponsor.cs" />
+    <Compile Include="UserProfile.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
