--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -535,6 +535,20 @@
     <Content Include="Scripts\moment-with-locales.min.js" />
     <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\moment.min.js" />
+    <Content Include="Scripts\nivo\changelog.txt" />
+    <Content Include="Scripts\nivo\license.txt" />
+    <Content Include="Content\nivo\nivo-lightbox.css" />
+    <Content Include="Scripts\nivo\nivo-lightbox.js" />
+    <Content Include="Scripts\nivo\nivo-lightbox.min.js" />
+    <Content Include="Content\nivo\default\close%402x.png" />
+    <Content Include="Content\nivo\default\close.png" />
+    <Content Include="Content\nivo\default\default.css" />
+    <Content Include="Content\nivo\default\loading%402x.gif" />
+    <Content Include="Content\nivo\default\loading.gif" />
+    <Content Include="Content\nivo\default\next%402x.png" />
+    <Content Include="Content\nivo\default\next.png" />
+    <Content Include="Content\nivo\default\prev%402x.png" />
+    <Content Include="Content\nivo\default\prev.png" />
     <Content Include="Views\Shared\ProductCategories.cshtml" />
     <Content Include="Content\image-uploader.css.map" />
     <Content Include="Content\image-uploader.less" />
@@ -608,6 +622,8 @@
     <Content Include="Scripts\wow.js" />
     <Content Include="Scripts\wow.min.js" />
     <Content Include="Scripts\_references.js" />
+    <Content Include="Scripts\nivo\bower.json" />
+    <Content Include="Scripts\nivo\README.md" />
     <None Include="Views\Home\SignalR.cshtml" />
     <Content Include="404.html" />
     <Content Include="500.html" />
