MZ-52 add edit-profile feature

--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -73,6 +73,7 @@
     <Compile Include="ServiceBase.cs" />
     <Compile Include="SpecificationService.cs" />
     <Compile Include="SponsorService.cs" />
+    <Compile Include="UserProfileService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\Mzayad.Data\Mzayad.Data.csproj">
