--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -77,6 +77,7 @@
     <Compile Include="ProductImage.cs" />
     <Compile Include="ProductSpecification.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ShippingAddress.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="Sponsor.cs" />
     <Compile Include="UserProfile.cs" />
