MZ-53 MZ-55 Add UserHostAddress To Bid with DB-Migration

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -201,6 +201,10 @@
     <Compile Include="Migrations\201504211200018_AddOrder_OrderItem_OrderLog.Designer.cs">
       <DependentUpon>201504211200018_AddOrder_OrderItem_OrderLog.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201504211225148_AddUserHostAddress_Bid.cs" />
+    <Compile Include="Migrations\201504211225148_AddUserHostAddress_Bid.Designer.cs">
+      <DependentUpon>201504211225148_AddUserHostAddress_Bid.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -316,6 +320,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201504211200018_AddOrder_OrderItem_OrderLog.resx">
       <DependentUpon>201504211200018_AddOrder_OrderItem_OrderLog.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201504211225148_AddUserHostAddress_Bid.resx">
+      <DependentUpon>201504211225148_AddUserHostAddress_Bid.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
