--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -677,6 +677,7 @@
     <Content Include="Views\Order\Index.cshtml" />
     <Content Include="Views\Order\Shipping.cshtml" />
     <Content Include="Views\Order\Summary.cshtml" />
+    <Content Include="Views\Order\Submit.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
