MZ-57 Add Export To Excel Add Change Order Status

--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -585,6 +585,7 @@
     <Content Include="Areas\admin\Views\Avatars\Add.cshtml" />
     <Content Include="Areas\admin\Views\Orders\Index.cshtml" />
     <Content Include="Areas\admin\Views\Orders\Details.cshtml" />
+    <Content Include="Areas\admin\Views\Orders\Ship.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
@@ -682,6 +683,7 @@
     <Content Include="Views\Orders\Shipping.cshtml" />
     <Content Include="Views\Orders\Summary.cshtml" />
     <Content Include="Views\Orders\Submit.cshtml" />
+    <Content Include="Views\Shared\DisplayTemplates\Address.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
