--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -74,6 +74,7 @@
     <Compile Include="Enum\PaymentMethod.cs" />
     <Compile Include="Enum\EmailTemplateType.cs" />
     <Compile Include="Enum\OrderType.cs" />
+    <Compile Include="Enum\SubscriptionStatus.cs" />
     <Compile Include="Enum\UserProfileStatus.cs" />
     <Compile Include="ModelBase.cs" />
     <Compile Include="Order.cs" />
@@ -86,6 +87,7 @@
     <Compile Include="ShippingAddress.cs" />
     <Compile Include="Specification.cs" />
     <Compile Include="Sponsor.cs" />
+    <Compile Include="Subscription.cs" />
     <Compile Include="UserProfile.cs" />
   </ItemGroup>
   <ItemGroup>
