MZ-59 Add Managment Feature To Add Edit View subscription .

--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -78,6 +78,7 @@
     <Compile Include="ServiceBase.cs" />
     <Compile Include="SpecificationService.cs" />
     <Compile Include="SponsorService.cs" />
+    <Compile Include="SubscriptionService.cs" />
     <Compile Include="UserProfileService.cs" />
   </ItemGroup>
   <ItemGroup>
