--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -280,6 +280,7 @@
     <Compile Include="Areas\admin\Controllers\SettingsController.cs" />
     <Compile Include="Areas\admin\Controllers\SpecificationsController.cs" />
     <Compile Include="Areas\admin\Controllers\SponsorsController.cs" />
+    <Compile Include="Areas\admin\Controllers\SubscriptionsController.cs" />
     <Compile Include="Areas\admin\Controllers\UsersController.cs" />
     <Compile Include="Areas\admin\Models\Auctions\AddEditViewModel.cs" />
     <Compile Include="Areas\admin\Models\Auctions\IndexViewModel.cs" />
@@ -290,6 +291,7 @@
     <Compile Include="Areas\admin\Models\Products\IndexViewModel.cs" />
     <Compile Include="Areas\admin\Models\Specification\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Sponsors\AddViewModel.cs" />
+    <Compile Include="Areas\admin\Models\Subscription\AddViewModel.cs" />
     <Compile Include="Areas\admin\Models\Users\DetailsViewModel.cs" />
     <Compile Include="Areas\admin\Models\Users\IndexViewModel.cs" />
     <Compile Include="Areas\Api\ApiAreaRegistration.cs" />
@@ -586,6 +588,10 @@
     <Content Include="Areas\admin\Views\Orders\Index.cshtml" />
     <Content Include="Areas\admin\Views\Orders\Details.cshtml" />
     <Content Include="Areas\admin\Views\Orders\Ship.cshtml" />
+    <Content Include="Areas\admin\Views\Subscriptions\Index.cshtml" />
+    <Content Include="Areas\admin\Views\Subscriptions\Add.cshtml" />
+    <Content Include="Areas\admin\Views\Subscriptions\Edit.cshtml" />
+    <Content Include="Areas\admin\Views\Subscriptions\_AddEdit.cshtml" />
     <None Include="Content\site.less" />
     <Content Include="Fonts\glyphicons-halflings-regular.woff" />
     <Content Include="Fonts\glyphicons-halflings-regular.ttf" />
