--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -89,6 +89,7 @@
     <Compile Include="Sponsor.cs" />
     <Compile Include="Subscription.cs" />
     <Compile Include="UserProfile.cs" />
+    <Compile Include="WishList.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
