--- a/src/Mzayad.Services/Mzayad.Services.csproj
+++ b/src/Mzayad.Services/Mzayad.Services.csproj
@@ -63,6 +63,8 @@
     <Reference Include="System" />
     <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Net.Http" />
+    <Reference Include="System.Net.Http.Formatting, Version=4.0.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AddressService.cs" />
@@ -73,6 +75,7 @@
     <Compile Include="EmailTemplateService.cs" />
     <Compile Include="NotificationService.cs" />
     <Compile Include="OrderService.cs" />
+    <Compile Include="Payment\KnetService.cs" />
     <Compile Include="ProductService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ServiceBase.cs" />
