--- a/src/Mzayad.Web/Mzayad.Web.csproj
+++ b/src/Mzayad.Web/Mzayad.Web.csproj
@@ -711,6 +711,7 @@
     <Content Include="Views\Orders\Success.cshtml" />
     <Content Include="Views\Shared\OrderDetailsSummary.cshtml" />
     <Content Include="Views\Shared\OrderItemsTable.cshtml" />
+    <Content Include="Views\Knet\Test.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
