MZ-61 added local shipping charge

--- a/src/Mzayad.Web/Web.config
+++ b/src/Mzayad.Web/Web.config
@@ -22,6 +22,7 @@
     <add key="CacheConnection" value="ojscache1.redis.cache.windows.net,ssl=true,syncTimeout=50000,password=p7GO+sbIhgnSrITKic3HQ6bcchi2ekvLQHjvrfn88bo=" />
     <add key="RequiredIcon" value="fa-asterisk" />
     <add key="SiteName" value="Mzayad.com" />
+    <add key="LocalShipping" value="1" />
   </appSettings>
   <system.web>
     <anonymousIdentification enabled="true" />
