MZ-53 added email template for OrderShipped

--- a/src/Mzayad.Data/Mzayad.Data.csproj
+++ b/src/Mzayad.Data/Mzayad.Data.csproj
@@ -217,6 +217,10 @@
     <Compile Include="Migrations\201505131328419_AddKnetTransaction.Designer.cs">
       <DependentUpon>201505131328419_AddKnetTransaction.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201505151256170_AddOrderShippedEmailTemplate.cs" />
+    <Compile Include="Migrations\201505151256170_AddOrderShippedEmailTemplate.Designer.cs">
+      <DependentUpon>201505151256170_AddOrderShippedEmailTemplate.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
@@ -344,6 +348,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201505131328419_AddKnetTransaction.resx">
       <DependentUpon>201505131328419_AddKnetTransaction.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201505151256170_AddOrderShippedEmailTemplate.resx">
+      <DependentUpon>201505151256170_AddOrderShippedEmailTemplate.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
