--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -91,6 +91,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ShippingAddress.cs" />
     <Compile Include="Specification.cs" />
+    <Compile Include="SplashAd.cs" />
     <Compile Include="Sponsor.cs" />
     <Compile Include="Subscription.cs" />
     <Compile Include="UserProfile.cs" />
