added project Key and Token to AppSettings to accommodate latest version of AzureBlobStorage

--- a/src/Mzayad.Models/Mzayad.Models.csproj
+++ b/src/Mzayad.Models/Mzayad.Models.csproj
@@ -95,6 +95,7 @@
     <Compile Include="Subscription.cs" />
     <Compile Include="UserProfile.cs" />
     <Compile Include="WishList.cs" />
+    <Compile Include="WishListAdminModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
